--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ header {
     padding: 15px 20px 10px;
     display: flex;
     align-items: center;
+    justify-content:space-between;
+    
 }
 
 /* header navigations */
