--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 :root {
     font-size: 15px;
+    font-family: "Zen Old Mincho", serif;
     line-height: 25px;
 }
 
@@ -19,6 +20,12 @@ body {
 a {
     color: black;
     text-decoration: none;
+}
+
+p {
+    font-family: "Noto Serif JP", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 /* header */
